upgrade to support java 25 and gradle 9.2.1