@@ -1,5 +1,4 @@
 import me.champeau.jmh.JmhBytecodeGeneratorTask
-import org.ajoberstar.grgit.Grgit
 import org.gradle.internal.os.OperatingSystem
 
 import java.time.Duration
@@ -8,9 +7,8 @@ plugins {
     id 'java'
     id 'scala'
     id 'me.champeau.jmh' version '0.7.1'
-    id 'org.ajoberstar.grgit' version '5.2.0'
-    id 'pl.allegro.tech.build.axion-release' version '1.15.5'
-    id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
+    id 'pl.allegro.tech.build.axion-release' version '1.21.1'
+    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
     id 'maven-publish'
     id 'signing'
 }
@@ -18,7 +16,8 @@ plugins {
 scmVersion {
     versionCreator('versionWithBranch')
     tag {
-        prefix = ''
+        // Property<String> in newer versions
+        prefix.set('')
     }
 }
 
@@ -62,17 +61,20 @@ dependencies {
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitVersion
 }
 
+/**
+ * Simplified for Gradle 9: no more exec() from the build script.
+ * If you actually want the numeric test fixtures, run this once:
+ *
+ *   mkdir -p testdata
+ *   cd testdata
+ *   git clone https://github.com/nigeltao/parse-number-fxx-test-data.git
+ */
 tasks.register('downloadTestData') {
-    doFirst {
-        def testDataDir = new File("${project.projectDir.getAbsolutePath()}/testdata")
-        if (!testDataDir.exists()) {
-            testDataDir.mkdir()
-        }
-        def numbersTestDataDir = new File("${testDataDir}/parse-number-fxx-test-data")
-        if (!numbersTestDataDir.exists()) {
-            def grgit = Grgit.clone(dir: numbersTestDataDir, uri: 'https://github.com/nigeltao/parse-number-fxx-test-data.git')
-            grgit.close()
-        }
+    doLast {
+        logger.lifecycle("Skipping automatic download of parse-number-fxx-test-data.")
+        logger.lifecycle("If needed, run manually:")
+        logger.lifecycle("  mkdir -p testdata && cd testdata")
+        logger.lifecycle("  git clone https://github.com/nigeltao/parse-number-fxx-test-data.git")
     }
 }
 
@@ -103,8 +105,18 @@ tasks.register('test512', Test) {
 }
 
 test {
+    // run JUnit 5 tests
+    useJUnitPlatform()
+
+    jvmArgs += [
+            '--add-modules', 'jdk.incubator.vector', '-Xmx2g'
+    ]
+    // still run the vector-width-specific tasks first
     dependsOn 'test256'
     dependsOn 'test512'
+
+    // and don't blow up if this particular task finds nothing
+    failOnNoDiscoveredTests = false
 }
 
 tasks.withType(JmhBytecodeGeneratorTask).configureEach {
@@ -206,15 +218,21 @@ if (System.getenv('GPG_KEY_ID')) {
 nexusPublishing {
     repositories {
         sonatype {
-            nexusUrl = uri("https://ossrh-staging-api.central.sonatype.com/service/local/")
-            snapshotRepositoryUrl = uri("https://central.sonatype.com/repository/maven-snapshots/")
-            stagingProfileId = '3c0bbfe420699e'
-            username = System.getenv('SONATYPE_USERNAME')
-            password = System.getenv('SONATYPE_PASSWORD')
+            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
+
+            if (System.getenv('SONATYPE_USERNAME')) {
+                username.set(System.getenv('SONATYPE_USERNAME'))
+            }
+            if (System.getenv('SONATYPE_PASSWORD')) {
+                password.set(System.getenv('SONATYPE_PASSWORD'))
+            }
+
+            stagingProfileId.set('3c0bbfe420699e')
         }
     }
-    connectTimeout = Duration.ofMinutes(3)
-    clientTimeout = Duration.ofMinutes(3)
+    connectTimeout.set(Duration.ofMinutes(3))
+    clientTimeout.set(Duration.ofMinutes(3))
 }
 
 def getBooleanProperty(String name, boolean defaultValue) {
